# intelligent-cockpit-hmi

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.opencode-subagent/: config.json  contract.example.json
PreDesign/: 01-设计依据与原则.md  02-信息架构.md  03-风险状态规范.md  04-组件与内容规范.md  05-我的Idea池.md  06-设计评审清单.md  README.md
apps/backend/: AGENTS.md  pyproject.toml
apps/backend/app/: cockpit_state.py  data.py  main.py  mock_llm.py  models.py  risk_engine.py
apps/backend/app/contracts/: __init__.py  v1.py
apps/backend/tests/: test_api.py  test_api_v1.py  test_cockpit_state.py  test_contracts_v1.py  test_risk_engine.py
deliverables/: README.md  早期项目验收报告.md  选题报告初稿-demo.md
docs/: 00-project-brief.md  01-school-requirements-mapping.md  02-scope-and-boundaries.md  03-system-architecture.md  04-development-environment.md  05-development-roadmap.md  06-demo-script.md  07-ai-usage-log-template.md  08-data-and-license-log.md  09-evaluation-plan.md  10-current-development-environment.md  11-jujutsu-workflow.md  DEVELOPMENT_STANDARDS.md  README.md  architecture.md  development.md
orchestration/: README.md  agents.json  environment-lock.json  project-status.json
scripts/: README.md  agent-control.mjs  agent-supervisor-worker.mjs  agent-supervisor.mjs  check-env.ps1  check-env.sh  export-docx-pdf.ps1  setup.ps1  setup.sh  smoke_test.py  task-contract.mjs  test_validate_markdown_links.py  test_validate_pr_body.py  validate.sh  (+2 more)
(+104 files in other folders)
